# pdbg-go-with-bazel

./: BUILD.bazel  MODULE.bazel  README.md  go.mod
analyzers/sample/: BUILD.bazel
apps/hello_world/: BUILD.bazel  main.go  os_windows.go
apps/sample/: BUILD.bazel  main.go
build_tools/macros/: oci.bzl
build_tools/transitions/: multi_arch.bzl
images/: 03-go-modules.dot
internal/reverse/: BUILD.bazel  string_test.go
internal/windows/: BUILD.bazel
