load("@gazelle//:def.bzl", "gazelle")

# linter の nogo を使う
load("@rules_go//go:def.bzl", "TOOLS_NOGO", "go_library", "nogo")

# gazelle:prefix github.com/korosuke613/go-bazel-playground
gazelle(name = "gazelle")

gazelle(
    name = "update-go-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_repos",
        "-bzlmod",
        "-prune",
    ],
    command = "update-repos",
)

nogo(
    name = "my_nogo",
    visibility = ["//visibility:public"],
    deps = TOOLS_NOGO + [
        "//analyzers/sample",
        "@com_github_gostaticanalysis_nilerr//:nilerr",
    ],
)

go_library(
    name = "go-bazel-playground",
    srcs = ["tools.go"],
    importpath = "github.com/korosuke613/go-bazel-playground",
    visibility = ["//visibility:public"],
    deps = ["@com_github_gostaticanalysis_nilerr//:nilerr"],
)
