load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "sample_lib",
    srcs = ["main.go"],
    importpath = "github.com/korosuke613/go-bazel-playground/apps/sample",
    visibility = ["//visibility:private"],
    deps = ["//internal/reverse"],
)

go_binary(
    name = "sample",
    embed = [":sample_lib"],
    visibility = ["//visibility:public"],
)
