load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "internal",
    srcs = ["windows.go"],
    importpath = "github.com/korosuke613/go-bazel-playground/internal",
    visibility = ["//:__subpackages__"],
)

go_library(
    name = "windows",
    srcs = ["windows.go"],
    importpath = "github.com/korosuke613/go-bazel-playground/internal/windows",
    visibility = ["//:__subpackages__"],
)
